<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.StartingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:padding="30dp"
            android:src="@drawable/usth_logo"
            android:contentDescription="@string/logo">
        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/starting_button_height"
                android:text="@string/choose_server"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                >
            </TextView>

            <Button
                android:id="@+id/freenode_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/starting_button_height"
                android:textAllCaps="false"
                android:text="@string/freenode"
                android:backgroundTint="@color/white"
                android:textColor="@color/black">
            </Button>

            <Button
                android:id="@+id/epiknet_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/starting_button_height"
                android:textAllCaps="false"
                android:text="@string/epiknet"
                android:backgroundTint="@color/white"
                android:textColor="@color/black">
            </Button>

            <Button
                android:id="@+id/quakenet_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/starting_button_height"
                android:textAllCaps="false"
                android:text="@string/quakenet"
                android:backgroundTint="@color/white"
                android:textColor="@color/black">
            </Button>

            <Button
                android:id="@+id/undernet_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/starting_button_height"
                android:textAllCaps="false"
                android:text="@string/undernet"
                android:backgroundTint="@color/white"
                android:textColor="@color/black">
            </Button>

            <Button
                android:id="@+id/kottnet_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/starting_button_height"
                android:textAllCaps="false"
                android:text="@string/kottnet"
                android:backgroundTint="@color/white"
                android:textColor="@color/black">
            </Button>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/starting_button_height"
                android:textAllCaps="false"
                android:text="@string/other"
                android:backgroundTint="@color/white"
                android:textColor="@color/black">
            </Button>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>