<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/channel_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/popup_join_channel_padding_left"
        android:paddingTop="@dimen/popup_join_channel_padding_top"
        android:paddingRight="@dimen/popup_join_channel_padding_right"
        android:text="@string/create_channel"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"></TextView>

    <EditText
        android:id="@+id/input_channel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/channel_name"
        android:layout_marginLeft="@dimen/popup_join_channel_padding_left"
        android:layout_marginRight="@dimen/popup_join_channel_padding_right"
        android:textColor="@color/black"></EditText>

    <TextView
        android:id="@+id/join_channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_channel"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/popup_join_channel_button_padding"
        android:text="@string/join"
        android:textColor="@color/orange"
        android:textSize="@dimen/popup_join_channel_button_text_size"
        android:textStyle="bold"></TextView>

    <TextView
        android:id="@+id/cancel_join_channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_channel"
        android:layout_toLeftOf="@+id/join_channel"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/popup_join_channel_button_padding"
        android:text="@string/cancel"
        android:textColor="@color/orange"
        android:textSize="@dimen/popup_join_channel_button_text_size"
        android:textStyle="bold"></TextView>
</RelativeLayout>